kubernetes/base/backend.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    service.alpha.kubernetes.io/tolerate-unready-endpoints: "true"
  name: ${PROJECT_NAME}-backend
  labels:
    app: ${PROJECT_NAME}-backend
spec:
  ports:
  - port: 3123
    name: ${PROJECT_NAME}-backend
  selector:
    app: ${PROJECT_NAME}-backend
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ${PROJECT_NAME}-backend
  labels:
    app: ${PROJECT_NAME}-backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ${PROJECT_NAME}-backend
  template:
    metadata:
      labels:
        app: ${PROJECT_NAME}-backend
    spec:
      containers:
      - name: ${PROJECT_NAME}-backend
        image: taavettik/heatpump-backend:${PROJECT_ENV}
        imagePullPolicy: Always
